fragments save commit

--- a/Simbirsoft_workshop/app/src/main/res/values/strings.xml
+++ b/Simbirsoft_workshop/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="search">Поиск</string>
     <string name="help">Помочь</string>
     <string name="history">История</string>
+    <string name="choose_photo">Выбрать фото</string>
+    <string name="take_photo">Сделать снимок</string>
+    <string name="delete">Удалить</string>
 </resources>
